# IBKR_TRADING_BOT

./: .pre-commit-config.yaml  ANALYSIS_REPORT.md  IMPLEMENTATION_GUIDE.md  OPTIMIZATION_NOTES.md  Projekt pro automatizované obchodování na IBKR.docx  README.md  README_REFAKTOR.md  __init__.py  app_context.py  download_ibkr_5m.py  generate_test_data.py  generate_validation_csv.py  main.py  project_tree_full.txt  pyproject.toml  requirements.txt  rolling_retrain_gui.py  ruff_output.txt  xtest06.py  xtest_features.py
.github/workflows/: ci.yml
config/: __init__.py  default_config.yaml  features_config.yaml  settings.py
core/config/: presets.py
core/datasource/: tradingview_client.py  tv_source.py  tv_webhook.py
core/models/: bars.py
core/repositories/: data_repo.py  model_repo.py  results_repo.py
core/services/: data_download_service.py  dataset_service.py  evaluation_service.py  live_bot_service.py  live_broker_adapter.py  model_service.py  model_training_service.py
core/utils/: feature_validation.py  features.py  ib_helpers.py  logging_setup.py  (+3 more)
data/: __init__.py  generate_synthetic.py  generate_synthetic_only.py
features/: augmentations.py  candlestick_patterns.py  feature_engineering.py  indicators.py  rolling_stats.py
gui/: __init__.py  main_window.py  tab_data_download.py  tab_live_bot.py  tab_model_evaluation.py  tab_model_manager.py  tab_model_training.py  timeframe.py
ibkr_trading_bot.egg-info/: PKG-INFO  requires.txt  top_level.txt
labels/: __init__.py  triple_barrier.py
logs/: eval_xgb.json  rolling_results_lgbm.csv  rolling_results_rf.csv  rolling_results_xgb.csv
model/: data_split.py  evaluate_models.py  load_model.py  selection.py  train_models.py  tscv.py
model_outputs/: GC1_COMEX_5min_5000bars_hgbt_20260217_151349.pkl  GC1_COMEX_5min_5000bars_hgbt_20260217_151349_meta.json  GC_COMEX_5m_40905bars_et_20260219_124926_meta.json  GC_COMEX_5m_40905bars_hgbt_20260219_120303.pkl  GC_COMEX_5m_40905bars_hgbt_20260219_120303_meta.json  GC_COMEX_5m_40905bars_hgbt_20260219_163233.pkl  GC_COMEX_5m_40905bars_hgbt_20260219_163233_meta.json  GC_COMEX_5m_40905bars_lgb_20260219_123136.pkl  GC_COMEX_5m_40905bars_lgb_20260219_123136_meta.json  GC_COMEX_5m_40905bars_rf_20260219_124444_meta.json  GC_COMEX_5m_40905bars_xgb_20260219_131348.pkl  GC_COMEX_5m_40905bars_xgb_20260219_131348_meta.json  GC_COMEX_5m_57662bars_et_20260218_131815_meta.json  GC_COMEX_5m_57662bars_hgbt_20260218_135918.pkl  GC_COMEX_5m_57662bars_hgbt_20260218_135918_meta.json  GC_COMEX_5m_57662bars_rf_20260218_134411_meta.json  GOLD_TVC_15min_5000bars_et_20251013_112814_meta.json  GOLD_TVC_1hour_5000bars_et_20251013_090733_meta.json  GOLD_TVC_1hour_5000bars_et_20251013_135006_meta.json  GOLD_TVC_1hour_5000bars_et_20251013_135650_meta.json  GOLD_TVC_1hour_5000bars_rf_20251013_083604_meta.json  GOLD_TVC_1hour_5000bars_rf_20251013_134647_meta.json  GOLD_TVC_1hour_5000bars_rf_20251013_135508_meta.json  GOLD_TVC_5min_5000bars_et_20251013_082456_meta.json  GOLD_TVC_5min_5000bars_et_20251013_135152_meta.json  GOLD_TVC_5min_5000bars_et_20251013_135852_meta.json  GOLD_TVC_5min_5000bars_et_20251014_185633_meta.json  GOLD_TVC_5min_5000bars_rf_20251013_090243_meta.json  GOLD_TVC_5min_5000bars_rf_20251013_140057_meta.json  UNKNOWN_UNK_UNK_5000bars_hgbt_20260218_110732.pkl  UNKNOWN_UNK_UNK_5000bars_hgbt_20260218_110732_meta.json  UNKNOWN_UNK_UNK_5000bars_hgbt_20260218_130912.pkl  UNKNOWN_UNK_UNK_5000bars_hgbt_20260218_130912_meta.json  et_20260218_130253_meta.json  hgbt_20260218_125551.pkl  hgbt_20260218_125551_meta.json
notebooks/: exploration.ipynb  generate_validation_set.py
results/: results.csv  results.json
scripts/: check_ib_connect.py  run_ibkr_download.py  run_ternary_training.py  run_triple_barrier_labeling.py  smoke_train_check.py
simulation/: __init__.py  offline_trader.py
tests/: test_data_split.py  test_features.py  test_metrics.py  test_model_pkl.py  test_signals.py  test_synthetic_data.py  test_trading_loop.py  test_trading_loop_like.py  test_training_cli.py
utils/: data_quality.py  download_ibkr_data.py  download_tradingview_data.py  io_helpers.py  logger.py  metrics.py  model_io.py
(+59 files in other folders)
